assets/css/style/fabulash.css
/* ... */
.kt-portlet .kt-portlet__head .kt-portlet__head-label .kt-portlet__head-icon {
    padding-right: 0.75rem;
    font-size: 1.3rem;
    color: #34abab;
}

.justify-start {
    display: flex;
    justify-content: flex-start;
}

.justify-end {
    display: flex;
    justify-content: flex-end;
}

.justify-center {
    display: flex;
    justify-content: center;
}

.justify-space-between {
    display: flex;
    justify-content: space-between;
}

.kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__heading .kt-menu__link-icon svg g [fill], .kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__link .kt-menu__link-icon svg g [fill] {
    -webkit-transition: fill 0.3s ease;
    transition: fill 0.3s ease;
    fill: #ffffff;
}

.kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__heading, .kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__link {
    /* background-color: #34abab; */
    background-image: linear-gradient(60deg, #76d0ca 0%, #3dbbb5 100%);

}

@media print {
  body * {
    visibility: hidden;
  }
  #print-section, #print-section * {
    visibility: visible;
  }
  #print-section {
    position: absolute;
    left: 0;
    top: 0;
  }
}

.kt-widget14 .kt-widget14__header {
    padding: unset;
}

.vertical-align {
    display:flex;
    align-items: center;
}

/* .swal2-popup .swal2-styled.swal2-confirm {
    background-color: #17bdbd;
} */

.kt-footer .kt-footer__copyright {
    color: #646ca3;
}

.kt-footer .kt-footer__copyright .kt-link {
    color: #646c9a;
}

.kt-footer {
    background: #ffffff00;
}

.kt-subheader .kt-subheader__main .kt-subheader__title {
    color: #646c9a;
}

.kt-footer {
    padding: 0px 25px 20px 25px;
    justify-content: center;
}

.kt-footer .kt-footer__copyright {
    padding: 0;
}

.btn-link:hover, .btn-link:active, .btn-link:focus {
    background-color: unset !important;
    color: #2739c1 !important;
}

.btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active, .show > .btn-success.dropdown-toggle {
    color: #fff;
    background-color: #278484;
    border-color: #206f6f;
}

.kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__heading, .kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__link {
    background-color: #ffffff00;
    background-image: unset;
}

.kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__heading .kt-menu__link-icon svg g [fill], .kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--here > .kt-menu__link .kt-menu__link-icon svg g [fill] {
    fill: #ffffff;
}

.kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--open > .kt-menu__heading, .kt-aside-menu .kt-menu__nav > .kt-menu__item.kt-menu__item--open > .kt-menu__link {
    background-color: #ffffff00;
    background-image: unset;
}

.side-logo-container {
    padding: 0px 25px;
}


.aside-logo {
    margin-bottom: 0px;
    font-weight: 700;
    font-size: 1.7rem;
    color: #fff;
}

.kt-aside--minimize .kt-aside__brand .kt-aside__brand-logo .aside-logo {
    display: none;
}

.sidebar-logo {
    margin-bottom: 0px;
    font-weight: 700;
    font-size: 1.5rem;
    display: none;
    color: #fff;
}

@media (max-width: 1024px) {
    .sidebar-logo {
        display: unset;
    }
}


@media (max-width: 575px) {
    .margin-mobile-b-10 {
        margin-bottom : 10px;
    }

    .margin-mobile-b-20 {
        margin-bottom : 20px;
    }

    .margin-mobile-b-5 {
        margin-bottom : 5px;
    }
}

